NetBSD Problem Report #47579

From paul@whooppee.com  Wed Feb 20 01:18:53 2013
Return-Path: <paul@whooppee.com>
Received: from mail.netbsd.org (mail.netbsd.org [149.20.53.66])
	by www.NetBSD.org (Postfix) with ESMTP id 8203C63E520
	for <gnats-bugs@gnats.NetBSD.org>; Wed, 20 Feb 2013 01:18:53 +0000 (UTC)
Message-Id: <20130220011852.3C36D246FE5@screamer.whooppee.com>
Date: Tue, 19 Feb 2013 17:18:52 -0800 (PST)
From: paul@whooppee.com
Reply-To: paul@whooppee.com
To: gnats-bugs@gnats.NetBSD.org
Subject: compat module does not provide kern.oboottime sysctl
X-Send-Pr-Version: 3.95

>Number:         47579
>Category:       kern
>Synopsis:       compat module does not provide kern.oboottime sysctl
>Confidential:   no
>Severity:       serious
>Priority:       medium
>Responsible:    pgoyette
>State:          closed
>Class:          sw-bug
>Submitter-Id:   net
>Arrival-Date:   Wed Feb 20 01:20:01 +0000 2013
>Closed-Date:    Thu Mar 14 16:55:18 +0000 2013
>Last-Modified:  Thu Mar 14 16:55:18 +0000 2013
>Originator:     Paul Goyette
>Release:        NetBSD 6.99.14
>Organization:
-------------------------------------------------------------------------
| Paul Goyette     | PGP Key fingerprint:     | E-mail addresses:       |
| Customer Service | FA29 0E3B 35AF E8AE 6651 | paul at whooppee.com    |
| Network Engineer | 0786 F758 55DE 53BA 7731 | pgoyette at juniper.net |
| Kernel Developer |                          | pgoyette at netbsd.org  |
-------------------------------------------------------------------------
>Environment:


System: NetBSD screamer.whooppee.com 6.99.14 NetBSD 6.99.14 (WHOOPPEE (shared) 2012-10-20 17:00:50) #52: Sat Oct 20 10:04:12 PDT 2012 paul@screamer.whooppee.com:/build/netbsd-local/obj/amd64/sys/arch/amd64/compile/WHOOPPEE amd64
Architecture: x86_64
Machine: amd64
>Description:
	If you build a kernel with 'options COMPAT_50' it will create a
	sysctl variable kern.oboottime.  However, the compat module does
	not provide this variable.  So, if you have older images that
	require this variable, you cannot use the compat module.
>How-To-Repeat:

>Fix:
	Move the sysctl code out of kern/sysctl_init.c and into
	kern/kern_time_50.c, and update compat/common/compat_mod.c to
	initialize it.

>Release-Note:

>Audit-Trail:
From: "Paul Goyette" <pgoyette@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47579 CVS commit: src/sys
Date: Thu, 21 Feb 2013 01:39:56 +0000

 Module Name:	src
 Committed By:	pgoyette
 Date:		Thu Feb 21 01:39:55 UTC 2013

 Modified Files:
 	src/sys/compat/common: compat_mod.c compat_util.h kern_time_50.c
 	    vfs_syscalls_43.c
 	src/sys/kern: init_main.c init_sysctl.c
 Added Files:
 	src/sys/compat/common: compat_mod.h

 Log Message:
 Move boottime50 and its associated sysctl into the compat module.  As
 noted on tech-kern.  Should fix PR/47579.

 OK christos@

 Will request pull-up to 6.0 in a few days.


 To generate a diff of this commit:
 cvs rdiff -u -r1.15 -r1.16 src/sys/compat/common/compat_mod.c
 cvs rdiff -u -r0 -r1.1 src/sys/compat/common/compat_mod.h
 cvs rdiff -u -r1.22 -r1.23 src/sys/compat/common/compat_util.h
 cvs rdiff -u -r1.24 -r1.25 src/sys/compat/common/kern_time_50.c
 cvs rdiff -u -r1.54 -r1.55 src/sys/compat/common/vfs_syscalls_43.c
 cvs rdiff -u -r1.446 -r1.447 src/sys/kern/init_main.c
 cvs rdiff -u -r1.194 -r1.195 src/sys/kern/init_sysctl.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

Responsible-Changed-From-To: kern-bug-people->pgoyette
Responsible-Changed-By: pgoyette@NetBSD.org
Responsible-Changed-When: Thu, 21 Feb 2013 01:42:19 +0000
Responsible-Changed-Why:
I'm working this one.


State-Changed-From-To: open->feedback
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Thu, 21 Feb 2013 01:42:19 +0000
State-Changed-Why:
Fix committed, will request pull-up to 60 soon.


From: "Jeff Rizzo" <riz@netbsd.org>
To: gnats-bugs@gnats.NetBSD.org
Cc: 
Subject: PR/47579 CVS commit: [netbsd-6] src/sys
Date: Thu, 14 Mar 2013 16:33:11 +0000

 Module Name:	src
 Committed By:	riz
 Date:		Thu Mar 14 16:33:10 UTC 2013

 Modified Files:
 	src/sys/compat/common [netbsd-6]: compat_mod.c compat_util.h
 	    kern_time_50.c vfs_syscalls_43.c
 	src/sys/kern [netbsd-6]: init_main.c init_sysctl.c
 Added Files:
 	src/sys/compat/common [netbsd-6]: compat_mod.h

 Log Message:
 Pull up following revision(s) (requested by pgoyette in ticket #837):
 	sys/compat/common/kern_time_50.c: revision 1.25
 	sys/kern/init_sysctl.c: revision 1.195
 	sys/kern/init_main.c: revision 1.447
 	sys/compat/common/compat_util.h: revision 1.23
 	sys/compat/common/compat_mod.h: revision 1.1
 	sys/compat/common/compat_mod.c: revision 1.16
 	sys/compat/common/compat_mod.c: revision 1.17
 	sys/compat/common/compat_mod.c: revision 1.18
 	sys/compat/common/vfs_syscalls_43.c: revision 1.55
 Move boottime50 and its associated sysctl into the compat module.  As
 noted on tech-kern.  Should fix PR/47579.
 OK christos@
 Will request pull-up to 6.0 in a few days.
 Wrap sysctl_teardown(&compat_clog) with the appropriate #if defined()s
 remove empty #if


 To generate a diff of this commit:
 cvs rdiff -u -r1.14 -r1.14.8.1 src/sys/compat/common/compat_mod.c
 cvs rdiff -u -r0 -r1.1.6.2 src/sys/compat/common/compat_mod.h
 cvs rdiff -u -r1.22 -r1.22.18.1 src/sys/compat/common/compat_util.h
 cvs rdiff -u -r1.22 -r1.22.2.1 src/sys/compat/common/kern_time_50.c
 cvs rdiff -u -r1.54 -r1.54.14.1 src/sys/compat/common/vfs_syscalls_43.c
 cvs rdiff -u -r1.441.2.2 -r1.441.2.3 src/sys/kern/init_main.c
 cvs rdiff -u -r1.186 -r1.186.2.1 src/sys/kern/init_sysctl.c

 Please note that diffs are not public domain; they are subject to the
 copyright notices on the relevant files.

State-Changed-From-To: feedback->closed
State-Changed-By: pgoyette@NetBSD.org
State-Changed-When: Thu, 14 Mar 2013 16:55:18 +0000
State-Changed-Why:
Pull-up completed, bug fixed.


>Unformatted:

NetBSD Home
NetBSD PR Database Search

(Contact us) $NetBSD: query-full-pr,v 1.49 2026/05/14 01:52:41 riastradh Exp $
$NetBSD: gnats_config.sh,v 1.10 2026/05/13 22:00:09 riastradh Exp $
Copyright © 1994-2026 The NetBSD Foundation, Inc. ALL RIGHTS RESERVED.