Move boottime50 and its associated sysctl into the compat module.  As noted on tech-kern.  Should fix PR/47579.

OK christos@

Will request pull-up to 6.0 in a few days.